Terraform With AWS Cloud/VPC and Nat Gateway/securitygroup.tf
resource "aws_security_group" "custom_sg" {
  name        = "custom_sg"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.custom-tf-vpc.id

  ingress {
    description      = "TLS from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

  tags = {
    Name = "custom_sg"
  }
}
